# cfit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/cfit/: __init__.py  cli.py  core.py  utils.py
tests/: smoke_test.py  test_cfit.py
