[project.urls]
repository = "https://github.com/jeonsworld/cfit"
changelog = "https://github.com/jeonsworld/cfit/releases"

[tool.poetry]
name = "cfit"
version = "0.1.0.post1"
description = "A tool to estimate GPU memory requirements"
authors = ["jeonsworld <jeonsworld@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cfit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
huggingface-hub = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cfit = "cfit.cli:cli"

[tool.poetry.extras]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]